k8s/gitops/20-network/base/25-monitoring/253-mongodb-exporter/ingress/allow-prometheus-to-mongodb-exporter.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-prometheus-to-mongodb-exporter
  namespace: db
spec:
  endpointSelector:
    matchLabels:
      app: mongodb-exporter

  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:app.kubernetes.io/name: prometheus
            k8s:io.kubernetes.pod.namespace: monitoring
      toPorts:
        - ports:
            - port: "9216"
              protocol: TCP
